code updated from @awoods suggestions